# llm-price-tracker

./: .gitignore  README.md  pyproject.toml
src/llm_price_tracker/: __init__.py  cli.py  diff.py  exceptions.py  fetch.py  models.py  snapshot.py  validation.py
src/llm_price_tracker/providers/: __init__.py  anthropic.py  common.py  google_gemini.py  kimi.py  minimax.py  openai.py  qwen.py
src/llm_price_tracker/utils/: __init__.py  html.py  http.py  money.py  time.py
tests/: test_cli.py  test_diff.py  test_html.py  test_money.py  test_snapshot.py
tests/fixtures/: anthropic_pricing.html  google_gemini_pricing.html  kimi_pricing.html  minimax_pricing.html  openai_pricing.html  qwen_pricing.html
tests/providers/: test_providers.py
